# lucky

./: README.md  pyproject.toml
data/: lucky.csv  lucky.ini
lucky/: lucky.py
tests/: test_lucky.py
