[tool.poetry]
name = "lucky"
version = "0.1.0"
description = ""
authors = ["Luan Nguyen <yabai5005@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"
polars = "^0.19.13"
typer = "^0.9.0"
pathlib = "^1.0.1"
loguru = "^0.7.2"
datetime = "^5.3"
configparser = "^6.0.0"
pytest = "^7.4.3"
black = "^23.11.0"
ruff = "^0.1.5"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  ".", "lucky",
]
